@@ -43,7 +43,6 @@ public abstract class AccessServiceAdmin
     protected String   supportedZonesPropertyName      = "SupportedZones";      /* Common */
     protected String   defaultZonesPropertyName        = "DefaultZones";        /* Common */
     protected String   publishZonesPropertyName        = "PublishZones";        /* Common */
-    protected String   archiveZonesPropertyName        = "ArchiveZones";        /* Common */
     protected String   karmaPointPlateauPropertyName   = "KarmaPointPlateau";   /* Community Profile OMAS */
     protected String   karmaPointIncrementPropertyName = "KarmaPointIncrement"; /* Community Profile OMAS */
 
@@ -631,7 +630,7 @@ public abstract class AccessServiceAdmin
             try
             {
                 Class<?>   connectorProviderClass = Class.forName(connectorProviderClassName);
-                Object     potentialConnectorProvider = connectorProviderClass.newInstance();
+                Object     potentialConnectorProvider = connectorProviderClass.getDeclaredConstructor().newInstance();
 
                 ConnectorProvider connectorProvider = (ConnectorProvider)potentialConnectorProvider;
 
